login changed , database issues fixed , 70% comlete
